# AD-EX

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/: README.MD  ai_engine.py  convert_data.py  creative_retrieval.py  db_storage.py  feature_analysis.py  image_generation.py  main.py  performance_prediction.py  scoring_engine.py
backend/api/: creatives.py
backend/generate/: helpers.py  mask_generator.py  postllm.py  postllm_antes.py
backend/pipeline/: ai_engine.py  post_upgrade_enrichment.py
backend/pipeline/step1_retrieval/: __init__.py  core.py  helpers.py
backend/pipeline/step2_feature_analysis/: core.py  helpers.py  llm_feature_gap.py
backend/pipeline/step3_generation/: core.py  evaluator.py  helpers.py
backend/pipeline/step4_persistence/: core.py  helpers.py
backend/retriver/: build_score_index.py  config.py  data_loader.py  inspect_score_index.py  paths.py  test_context_score.py
backend/scripts/: ad_qa_bot.py  fix_generated_ids.py  playground_diffusion.py  preprocess_all.py  preprocess_masks.py  preprocess_retrieval_index.py  preprocess_scores.py  preprocess_semantic_embeddings.py  preprocess_visual_semantic.py  process_postllm.py  test_diffusion.py  test_vision_gap.py
backend/to-remove/: final.py  idea.py  junto.py  new_idea_2.py
data/: campaign_summary.csv  campaigns.csv  creative_summary.csv  creatives.csv  data_dictionary.csv
frontend/: index.html  package-lock.json  package.json
frontend/public/data/: creative_retrieval_index.csv  performance_scores.csv
frontend/src/: index.css  main.jsx
frontend/src/components/: CreativeCard.jsx  CreativeChatModal.jsx  CtrPredictionPanel.jsx  (+1 more)
(+2320 files in other folders)
